# Checkers

./: CMakeLists.txt
hpp/: Chekers.cpp  Chekers.hpp  MeshData.hpp  MeshPrinter.hpp  TikTakToe.hpp  basicenums.hpp
src/: Cheker.cpp  MeshData.cpp  MeshPrinter.cpp  TikTakToe.cpp  main.cpp
